[package]
name = "zylinth"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.2.1"
bevy = { version = "0.15.3", features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
    "bevy_dev_tools",
] }
bevy_ecs_tilemap = "0.15.0"
bevy_lit = "0.6.0"
bevy_pancam = "0.17.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
noise = "0.9.0"
rand = "0.9.0"
rand_chacha = "0.9.0"

[features]
default = ["render"]
atlas = []
render = []
