[package]
name = "zylinth"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.2.1"
bevy = { version = "0.15.3", features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
    "bevy_dev_tools",
] }
bevy_lit = "0.6.0"
bevy_pancam = "0.17.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
linked_hash_set = "0.1.5"
noise = "0.9.0"
rand = "0.9.0"
rand_chacha = "0.9.0"

[features]
default = ["render"]
atlas = []
render = []

# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 2

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
